--- a/app/views/songs/new.html.erb
+++ b/app/views/songs/new.html.erb
@@ -3,7 +3,22 @@
 <%= form_for @song  do |f| %>
   <%= f.label :title %>
   <%= f.text_field :title %>
-  <br />
+  <br>
+  <%= f.label :artist_name %>
+  <%= f.text_field :artist_name %>
+  <br>
+  <%= f.label :genre_id %>
+  <%= f.collection_select :genre_id, Genre.all, :name, :name %>
+
+  <br>
+  <%= f.label :notes_attributes %>
+  <br>
+  1: <input name="song[notes_attributes][]">
+  <br>
+  2: <input name="song[notes_attributes][]">
+  <br>
+  3: <input name="song[notes_attributes][]">
+  <br>
 
   <%= f.submit %>
 <% end %>
