--- a/app/views/songs/show.html.erb
+++ b/app/views/songs/show.html.erb
@@ -1,3 +1,15 @@
-<h1>Songs#show</h1>
+<h1>Song Info</h1>
 
 Title: <%= @song.title %>
+<%# 
+<br>
+Artist: <%= @song.artist_name %>
+<%#
+<br>
+Genre: <%= @song.genre_id %>
+<%#
+<br>
+Song Notes: <%= @song.notes_content %>
+
+
+
