solved with add to controller song.songnotes.build

--- a/app/views/songs/show.html.erb
+++ b/app/views/songs/show.html.erb
@@ -1,15 +1,13 @@
 <h1>Song Info</h1>
 
 Title: <%= @song.title %>
-<%# 
+
 <br>
 Artist: <%= @song.artist_name %>
-<%#
 <br>
 Genre: <%= @song.genre_id %>
-<%#
 <br>
-Song Notes: <%= @song.notes_content %>
+Song Notes: <%= @song_notes_attributes %>
 
 
 
