--- a/app/views/songs/new.html.erb
+++ b/app/views/songs/new.html.erb
@@ -1,7 +1,7 @@
 <h1>Create a Song</h1>
 
 <%= form_for @song  do |f| %>
-  <%= f.label :title %>
+  <%= f.label :title, "Song Title" %>
   <%= f.text_field :title %>
   <br>
   <%= f.label :artist_name %>
@@ -12,15 +12,13 @@
   <br>
 
   <h3>Notes</h3>
-  <%= f.fields_for :note_attributes do |note_attribute| %>
-    1: <%= note_attribute.text_area :content, rows: 2, cols: 28 %>
-    <br>
-    2: <%= note_attribute.text_area :content, rows: 2, cols: 28 %>
-    <br>
-    3: <%= note_attribute.text_area :content, rows: 2, cols: 28 %>
-    <br>
+  <%= f.fields_for :notes do |note_attribute| %>
+    <%= note_attribute.label :note %>
+    <%= note_attribute.text_area :content, rows: 2, cols: 28 %>
+  <br>
   <% end %>
-
+  <br>
+  <br>
   <%= f.submit %>
 <% end %>
 
